# msf-cli

./: .gitignore  README.md  pyproject.toml
msf_cli/: broker.py  cli.py  devices.py  install.py  new.py
msf_cli/static/: main.py  mqtt_as.json  settings.py
