[tool.poetry]
name = "msf-cli"
version = "0.1.1"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"
include = [
    "msf_cli/static/mqtt_as.json",
    "msf_cli/static/main.py",
    "msf_cli/static/settings.py"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
msf = "msf_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
