[tool.poetry]
name = "msf-cli"
version = "0.2.2"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"
include = [
    "msf_cli/static/mqtt_as.json",
    "msf_cli/static/main.py",
    "msf_cli/static/settings.py"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.9.1"
paho-mqtt = "1.6.1"
python-dotenv = "^1.0.1"
sniffs = "^0.6.2"

[tool.poetry.scripts]
msf = "msf_cli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
